# minerpp

./: CMakeLists.txt  README.md  consoleColor.h  main.cpp
libs/sphlib-3.0-c/: sph_shabal.h
